<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ee3305_py</name>
  <version>0.0.0</version>
  <description>Answers at https://www.youtube.com/watch?v=dQw4w9WgXcQ</description>
  <maintainer email="lai.yankai@gmail.com">Lai Yan Kai</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
